--- a/01.md
+++ b/01.md
@@ -1,4 +1,4 @@
-## 第一课
+## 第1课
 
 ### 1.安装依赖
 
@@ -114,7 +114,7 @@ print(people.head())
 ```python
 import pandas as pd
 
-people = pd.read_excel("C:/temp/People.xlsx", header=None)  
+people = pd.read_excel("C:/temp/People.xlsx", header=None)  ##
 print(people.head())
 print(people.columns)
 ```
