--- a/03.md
+++ b/03.md
@@ -1,4 +1,43 @@
-# 第三课
+# 第3课
+
+## 0 什么是序列
+
+> Pandas Series 类似表格中的一个列（column），类似于一维数组，可以保存任何数据类型。
+>
+> 原文链接: https://www.runoob.com/pandas/pandas-series.html
+
+```python
+import pandas
+
+pandas.Series( data, index, dtype, name, copy )
+```
+参数说明:
+
+- data：一组数据(ndarray 类型)。
+
+- index：数据索引标签，如果不指定，默认从 0 开始。
+
+- dtype：数据类型，默认会自己判断。
+
+- name：设置名称。
+
+- copy：拷贝数据，默认为 False。
+
+创建一个简单的 Series 实例：
+
+```python
+import pandas as pd
+
+a = [1, 2, 3]
+
+myvar = pd.Series(a)
+
+print(myvar)
+```
+
+![image-20211220211725723](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220211738.png)
+
+
 
 ## 1 创建序列
 
