--- a/04.md
+++ b/04.md
@@ -1,6 +1,6 @@
-# 第四课
+# 第4课
 
-## 1  错误读取
+## 1  错位读取
 
 ![image-20211219090832851](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219112555.png)
 
@@ -25,7 +25,7 @@ print(people.head())
 
 ## 2 读取某列数据
 
-### 案例
+### 案例: 
 
 ![image-20211219091626799](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219112553.png)
 
