增加迭代文件

--- a/00常用的os库函数.md
+++ b/00常用的os库函数.md
@@ -8,8 +8,8 @@
 - 拼接路径` os.path.join ` 自动选择` \ `或 `/`
 - 删除文件 `os.remove`
 - 分离文件名和扩展名` os.path.splitext`
-
-
+- 获取绝对路径 `os.path.abspath`
+- 迭代文件对象 `os.scanDir`
 
 
 
@@ -83,5 +83,16 @@ dist = "c:/2.txt" # 目标文件
 shutil.copy(src, dist)  
 ```
 
+## 遍历某个文件夹的文件
 
+```python
+import os
+
+files = os.scandir(os.path.abspath('.'))
+
+for file in files:
+	print(file.name)
+	print(file.path)
+	
+```
 
