修改第一课内容

--- a/01.md
+++ b/01.md
@@ -1,6 +1,6 @@
-## 第1课
+# 第1课
 
-### 1.安装依赖
+## 1.安装依赖
 
 安装`pandas`
 
@@ -13,130 +13,26 @@ pip install pandas
 ```bash
 pip install xlwt
 ```
+## 2. Pandas 数据结构 - DataFrame
 
-### 2.用pandas创建excel文件
+>`DataFrame `是一个表格型的数据结构，它含有一组有序的列，每列可以是不同的值类型（数>>值、字符串、布尔型值）。`DataFrame `既有行索引也有列索引，它可以被看做由 `Series `组成的字典（共同用一个索引）。
+>原文地址: https://www.runoob.com/pandas/pandas-dataframe.html
+
+![image-20211220214020819](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220214444.png)
+
 
 ```python
+#实例 - 使用 ndarrays 创建
+
 import pandas as pd
 
-df = pd.DataFrame({"ID": [1, 2, 3], "NAME": ["vincent", "peipei", "son"]}) # DataFrame数据帧
-df.to_excel("C:/temp/my_excel.xlsx")  # 写excel文件
-print("done")
+data = {'Site':['Google', 'Runoob', 'Wiki'], 'Age':[10, 12, 13]}
+df = pd.DataFrame(data)
+print (df)
 ```
 
-运行结果
+从以上输出结果可以知道， DataFrame 数据类型一个表格，包含 rows（行） 和 columns（列）：
 
-![image-20211218211105578](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223559.png)
+![img](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220214447.jpg)
 
-## 第二课
-
-### 2.1 查看excel 有多少行和多少列
-
-```python
-import pandas as pd
-
-df = pd.read_excel("C:/temp/People.xlsx")
-print(df.shape)
-print("done")
-```
-
-![image-20211218213814065](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223557.png)
-
-### 2.2 查看列信息
-
-```python
-import pandas as pd
-
-df = pd.read_excel("C:/temp/People.xlsx")
-print(df.columns) # 查看列
-```
-
-
-![image-20211218214021362](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223608.png)
-
-
-
-### 2.3 查看前面N行
-
-```python
-import pandas as pd
-
-df = pd.read_excel("C:/temp/People.xlsx")
-print(df.head(5)) ## 查看前面5行
-```
-
-
-
-![image-20211218214355313](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223610.png)
-
-
-
-### 2.4 查看末尾N行
-
-```python
-import pandas as pd
-
-df = pd.read_excel("C:/temp/People.xlsx")
-print(df.tail(5)) ## 查看末尾5行
-```
-
-![image-20211218214520594](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223613.png)
-
-
-
-### 2.5 错位读取
-
-#### 如果excel出现空行.比如前面2行为空行,第3行开始才有数据
-
-![image-20211218214909271](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223618.png)
-
- `header`指定头部(标题头部)是第几行 , 
-
-设置header=2. 由第3行开始读取. (header由0开始计算)
-
-```python
-import pandas as pd
-
-people = pd.read_excel("C:/temp/People.xlsx", header=2)  # 由0开始数, 第3行为2.
-print(people.head())
-```
-
-![image-20211218215126610](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223620.png)
-
-
-
-##### 如果excel表没有标题头部
-
-![image-20211218215649992](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223623.png)
-
-设置`header=None`即可
-
-```python
-import pandas as pd
-
-people = pd.read_excel("C:/temp/People.xlsx", header=None)  ##
-print(people.head())
-print(people.columns)
-```
-
-![image-20211218220009914](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223625.png)
-
-
-
-**也可以自己自定义列名称**
-
-```python
-import pandas as pd
-
-people = pd.read_excel("C:/temp/People.xlsx", header=None)
-people.columns = ["id", "姓名"]  ## 自定义列名称
-print(people.head())
-print(people.columns)
-```
-
-![image-20211218220347155](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223628.png)
-
-
-
-
-
+![img](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220214455.png)
