修改文件名称

--- a/06-函数填充，计算列 .md
+++ b/06-函数填充，计算列 .md
@@ -20,7 +20,7 @@ print(books)
 
 ![image-20211219122809202](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219153503.png)
 
-##  匿名函数计算列
+##  2 匿名函数计算列
 
 ```python
 import pandas as pd
