--- a/08-数据筛选、过滤.md
+++ b/08-数据筛选、过滤.md
@@ -1,12 +1,43 @@
 # 第8课
 
+## 0 `iloc`和`loc`函数
+
+loc的使用, 或指定index我值
+
+![image-20211220223547120](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223558.png)
+
+```python
+# datafram.loc[index]
+
+b = pd.read_excel("./001.xlsx")
+a = b.loc[0]  
+print(a)
+
+
+# 输出
+# name    zhangsan01
+# age             12
+# Name: 0, dtype: object
+
+```
+
+
+
+![image-20211220221742172](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223602.png)
+
+![image-20211220221721220](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223612.png)
+
+
+
+
+
 ## 1. 筛选数据
 
 ### 单条件过滤
 
 查询价格大于200的数据
 
-![image-20211219135018708](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219153546.png)
+![image-20211219135018708](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223614.png)
 
 ```python
 import pandas as pd
