--- a/18-轴的概率, 校验数据.md
+++ b/18-轴的概率, 校验数据.md
@@ -6,11 +6,11 @@ axis可以理解为方向
 
 axis=0 从上到下(列)
 
-![image-20211220225617589](C:\Users\Administrator\Desktop\pandas笔记\18-轴的概率.assets\image-20211220225617589.png)
+![image-20211220225617589](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220230419.png)
 
 axis=1 从左到右(行)
 
-![image-20211220225558298](C:\Users\Administrator\Desktop\pandas笔记\18-轴的概率.assets\image-20211220225558298.png)
+![image-20211220225558298](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220230421.png)
 
 
 
