--- a/00-常用的os库函数.md
+++ b/00-常用的os库函数.md
@@ -1,4 +1,4 @@
-## 常用函数
+## os库常用函数
 
 - 获取当前路径 `os.getcwd()`
 - 判断文件或目录是否存在 `os.path.exists`
@@ -51,7 +51,7 @@ os.makedirs(path)  # 创建多级目录（如'F:\XXX\SSS'），在F盘下创建X
 
 ## 3 删除文件或目录
 
-```
+```python
 import os
 os.remove(path)  #删除文件（必须是文件）
 os.rmdir(path)  #删除path目录(只能删除一级目录，如'F:\XXX\SSS'),只删除SSS目录
@@ -61,7 +61,7 @@ os.removedirs(path)  #删除多级目录（如'F:\XXX\SSS'）,必须为空目录
 ##  4 判断文件
 
 ### 文件是否存在
-```
+```python
 import os
 os.path.exists(path)  #判断path是否存在，存在返回True,不存在返回False
 ```
@@ -76,10 +76,10 @@ os.path.isdir(path)  #判断path是否目录，是返回True，不是返回False
 
 复制文件 
 
-```
+```python
 import shutil
-src = "c:/1.txt" # 源文件
-dist = "c:/2.txt" # 目标文件
+src = "c:/1.txt"  # 源文件路径
+dist = "c:/2.txt" # 目标路径
 shutil.copy(src, dist)  
 ```
 
@@ -91,8 +91,8 @@ import os
 files = os.scandir(os.path.abspath('.'))
 
 for file in files:
-	print(file.name)
-	print(file.path)
+	print(file.name) # 输出: 02_read_excel.py
+	print(file.path) # 输出: E:\02_read_excel.py
 	
 ```
 
