--- a/03-行，列，单元格.md
+++ b/03-行，列，单元格.md
@@ -43,7 +43,7 @@ print(myvar)
 
 
 
-`序列Series`是excel表种的一行或者是一列数据, 具体要看`序列Series`是用什么方式加入datafream数据帧中
+`序列Series`是excel表种的一行或者是一列数据, 具体要看`序列Series`是用什么方式加入dataframe数据帧中
 
 字典d的key会作为index,  字典的value作为序列的值
 
@@ -83,9 +83,9 @@ print(df)
 
 ## 2. `序列`作为`行`
 
-如果序列是用`列表[]`加入到datafream.
+如果序列是用`列表[]`加入到dataframe.
 
-datafream会把序列看成一行,把每个序列的的`name`看成行号
+dataframe会把序列看成一行,把每个序列的的`name`看成行号
 
 ```python
 import pandas as pd
