--- a/05-填充日期序列.md
+++ b/05-填充日期序列.md
@@ -6,6 +6,7 @@
 ![image-20211219101129255](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219121748.png)
 
 
+填充后:
 ```python
 import pandas as pd
 from datetime import date, timedelta
@@ -16,9 +17,6 @@ for i in books.index:
 print(books)
 
 ```
-
-填充后:
-
 ![image-20211219101059708](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219121753.png)
 
 
@@ -46,7 +44,7 @@ print(books)
 
 
 
-```
+```python
 import pandas as pd
 from datetime import date, timedelta
 
@@ -70,7 +68,7 @@ print(books)
 
 
 
-## 3 修改单元格的值(基于`dataFream`)
+## 3 修改单元格的值(基于`dataFrame`)
 
 ```python
 import pandas as pd
