--- a/07-排序.md
+++ b/07-排序.md
@@ -24,7 +24,7 @@ print(books)
 
 先按`是否值得`排序,再按`价格`排序
 
-```
+```python
 file = './excel/books.xlsx'
 books = pd.read_excel(file, index_col="id")
 books.sort_values(by=["是否值得", "价格"], inplace=True, ascending=[False, True])  # 排序
