--- a/08-数据筛选、过滤.md
+++ b/08-数据筛选、过滤.md
@@ -7,7 +7,7 @@ loc的使用, 或指定index我值
 ![image-20211220223547120](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223558.png)
 
 ```python
-# datafram.loc[index]
+# dataframe.loc[index]
 
 b = pd.read_excel("./001.xlsx")
 a = b.loc[0]  
