--- a/19-列分裂和列合并.md
+++ b/19-列分裂和列合并.md
@@ -21,7 +21,7 @@ import pandas as pd
 
 books = pd.read_excel("./books.xlsx",sheet_name="Sheet2")
 r = books['name'].str.split(expand=True) # 拆分name列
-print(type(r))    # 类型是datafream
+print(type(r))    # 类型是dataframe
 print(r) 
 ```
 
