--- a/20-求和_求平均值.md
+++ b/20-求和_求平均值.md
@@ -18,7 +18,7 @@ import pandas as pd
 
 student = pd.read_excel("./student.xlsx",sheet_name="Sheet2")
 row_sum = student[["语文","数学","英语"]].sum(axis=1) # axis=1按行计算.
-print(type(student[["语文","数学","英语"]])) # 输出: Datafream
+print(type(student[["语文","数学","英语"]])) # 输出: Dataframe
 print(row_sum) 
 ```
 
