--- a/22-旋转数据表(行列转换).md
+++ b/22-旋转数据表(行列转换).md
@@ -1,14 +1,14 @@
-## 1 Excel中的旋转数据表
+## 1 原生Excel中的旋转数据表(行列转换)
 
 1. 复制表格
-2. 张铁表格
+2. 粘贴表格
 3. 选择`转置`
 
 ![image-20211221201930142](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221204438.png)
 
 
 
-## 2 使用transpose函数旋转数据表
+## 2 在pandas中, 使用transpose函数旋转数据表
 
 ![image-20211221202901907](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221204440.png)
 
