--- a/00-常用的os库函数.md
+++ b/00-常用的os库函数.md
@@ -19,22 +19,22 @@
 
 ### 获取当前路径
 ```python
-os.getcwd()  #返回当前工作目录
+os.getcwd()  # 返回当前工作目录
 ```
 
 ![image-20211219112958864](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219121921.png)
 
-### 绝对路径
+### 获取绝对路径
 ```python
 import os
-os.path.abspath(path) #返回path的绝对路径
+os.path.abspath(path)  # 返回path的绝对路径
 ```
 
 
-### path目录下所有文件名称列表
+### 获取path目录下所有文件名称列表
 ```python
 import os
-os.listdir(path)  #返回path目录下所有文件列表
+os.listdir(path)  # 返回path目录下所有文件列表
 ```
 
 ![image-20211219113129281](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211219121923.png)
@@ -53,9 +53,9 @@ os.makedirs(path)  # 创建多级目录（如'F:\XXX\SSS'），在F盘下创建X
 
 ```python
 import os
-os.remove(path)  #删除文件（必须是文件）
-os.rmdir(path)  #删除path目录(只能删除一级目录，如'F:\XXX\SSS'),只删除SSS目录
-os.removedirs(path)  #删除多级目录（如'F:\XXX\SSS'）,必须为空目录，删除SSS、FFF目录
+os.remove(path)  # 删除文件（必须是文件）
+os.rmdir(path)  # 删除path目录(只能删除一级目录，如'F:\XXX\SSS'),只删除SSS目录
+os.removedirs(path)  # 删除多级目录（如'F:\XXX\SSS'）,必须为空目录，删除SSS、FFF目录
 ```
 
 ##  4 判断文件
@@ -63,18 +63,16 @@ os.removedirs(path)  #删除多级目录（如'F:\XXX\SSS'）,必须为空目录
 ### 文件是否存在
 ```python
 import os
-os.path.exists(path)  #判断path是否存在，存在返回True,不存在返回False
+os.path.exists(path)  # 判断path是否存在，存在返回True,不存在返回False
 ```
 ### 判断文件类型
 ```python
 import os
-os.path.isfile(path)  #判断path是否为文件，是返回True,不是返回False
-os.path.isdir(path)  #判断path是否目录，是返回True，不是返回False
+os.path.isfile(path)  # 判断path是否为文件，是返回True,不是返回False
+os.path.isdir(path)  # 判断path是否目录，是返回True，不是返回False
 ```
 
 ## 5 复制文件
-
-复制文件 
 
 ```python
 import shutil
@@ -88,7 +86,7 @@ shutil.copy(src, dist)
 ```python
 import os
 
-files = os.scandir(os.path.abspath('.'))
+files = os.scandir(os.path.abspath('.'))  # 获取当前文件夹的文件
 
 for file in files:
 	print(file.name) # 输出: 02_read_excel.py
