--- a/02-读取文件.md
+++ b/02-读取文件.md
@@ -1,6 +1,6 @@
 # 第2课
 
-## 1 查看excel 有多少行和多少列
+## 1 查看有多少行和多少列
 
 ```python
 import pandas as pd
@@ -32,7 +32,7 @@ print(df.columns) # 查看列
 import pandas as pd
 
 df = pd.read_excel("C:/temp/People.xlsx")
-print(df.head(5)) ## 查看前面5行
+print(df.head(5)) # 查看前面5行
 ```
 
 
@@ -47,7 +47,7 @@ print(df.head(5)) ## 查看前面5行
 import pandas as pd
 
 df = pd.read_excel("C:/temp/People.xlsx")
-print(df.tail(5)) ## 查看末尾5行
+print(df.tail(5)) # 查看末尾5行
 ```
 
 ![image-20211218214520594](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211218223646.png)
@@ -99,7 +99,7 @@ print(people.columns)
 import pandas as pd
 
 people = pd.read_excel("C:/temp/People.xlsx", header=None)
-people.columns = ["id", "姓名"]  ## 自定义列名称
+people.columns = ["id", "姓名"]  # 自定义列名称
 print(people.head())
 print(people.columns)
 ```
