--- a/08-数据筛选、过滤.md
+++ b/08-数据筛选、过滤.md
@@ -2,7 +2,7 @@
 
 ## 0 `iloc`和`loc`函数
 
-loc的使用, 或指定index我值
+loc的使用, 或指定index值
 
 ![image-20211220223547120](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211220223558.png)
 
