--- a/23-分组,透视表.md
+++ b/23-分组,透视表.md
@@ -1,16 +1,16 @@
-##  1 Excel中创建透视表
+##  1.Excel中创建透视表
 
 ![image-20211221204734503](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211443.png)![image-20211221204848166](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211447.png)
 
 ![image-20211221205227014](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211449.png)
 
-## 2 删除Excel中透视表
+## 2.删除Excel中透视表
 
 ![image-20211221205323216](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211451.png)
 
 选中透视表,然后**按键盘的`delete`键即可**
 
-## 4  用pandas创建透视表
+## 3.用pandas创建透视表
 
 ![image-20211221210838160](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211453.png)
 
@@ -26,7 +26,7 @@ print(pt1)
 
 ![image-20211221210847271](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211455.png)
 
-## 4  groupby
+## 4.groupby
 
 ![image-20211221211310502](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211457.png)
 
