--- a/29-列操作.md
+++ b/29-列操作.md
@@ -2,14 +2,14 @@
 
 
 
-## 1 追加列
+## 1.追加列
 
 ![image-20211221222128783](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222147.png)
 
 ```python
 import pandas as pd
 
-students = pd.read_excel("./student.xlsx",sheet_name="Sheet2")
+students = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
 students["数学"] = 100
 print(students)
 
@@ -17,28 +17,28 @@ print(students)
 
 ![image-20211221222144322](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222148.png)
 
-## 2删除列
+## 2.删除列
 
 ![image-20211221222128783](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222147.png)
 
 ```python
 import pandas as pd
 
-students = pd.read_excel("./student.xlsx",sheet_name="Sheet2")
-students.drop(columns=['语文'],inplace=True) # 删除列
+students = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
+students.drop(columns=['语文'], inplace=True) # 删除列
 print(students)
 ```
 
 ![image-20211221222335974](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221223813.png)
 
-## 3 插入列
+## 3.插入列
 
 ![image-20211221222128783](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222147.png)
 
 ```python
 import pandas as pd
 
-students = pd.read_excel("./student.xlsx",sheet_name="Sheet2")
+students = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
 students.insert(1, column="年龄", value=100) # 插入列
 print(students)
 ```
@@ -47,7 +47,7 @@ print(students)
 
 ![image-20211221222950549](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221223811.png)
 
-## 4 修改列名
+## 4.修改列名
 
 ![image-20211221222128783](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222147.png)
 
@@ -56,8 +56,8 @@ print(students)
 ```python
 import pandas as pd
 
-table = pd.read_excel("./student.xlsx",sheet_name="Sheet2")
-table.rename(columns={"name":"名称","语文":"yuwen"},inplace=True) # 修改列名 
+table = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
+table.rename(columns={"name":"名称","语文":"yuwen"}, inplace=True) # 修改列名 
 print(table)
 ```
 
