--- a/00-常用的os库函数.md
+++ b/00-常用的os库函数.md
@@ -94,3 +94,44 @@ for file in files:
 	
 ```
 
+## 7 递归扫描文件夹的文件
+```python
+ def scan_file(path):
+        """
+        递归扫描文件夹下的所有文件
+        """
+        files = []
+
+        def _scan_file(path):
+            for file_name in os.listdir(path):
+                file_path = path + "/" + file_name
+                if os.path.isdir(file_path):
+                    _scan_file(file_path)
+                else:
+                    files.append(file)
+
+        _scan_file(path)
+        return files
+```
+
+
+## 8 删除文件夹
+```python
+import shutil
+
+shutil.rmtree(path)
+```
+
+## 9 清空文件夹
+```python
+import shutil
+
+def clean_dir(path):
+		"""
+		清空文件夹
+		"""
+		if os.path.exists(path):
+		    shutil.rmtree(path)
+		os.mkdir(path)
+```
+
