--- a/28-行操作.md
+++ b/28-行操作.md
@@ -117,9 +117,7 @@ print(students)
 ![image-20211221215906420](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221221150.png)
 
 ## 8.按条件删除行
-
-![image-20211221221041747](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221221152.png)
-
+### 单条件删除
 ```python
 import pandas as pd
 
@@ -128,5 +126,18 @@ remove_index = students.loc[students["语文"]<60].index ## 查询语文低于60
 students.drop(index=remove_index, inplace=True) # 按条件删除数据
 print(students)
 ```
+删除前
+![image-20211221221041747](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221221152.png)
 
+删除后
 ![image-20211221221057970](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221221154.png)
+
+
+### 多条件删除
+```python
+import pandas as pd
+
+table = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
+remove_index = table[(table["收/支"] == "支出") & (table["交易状态"] == "交易关闭")].index
+table.drop(index=remove_index, inplace=True)  # 按条件删除数据
+```
