--- a/29-列操作.md
+++ b/29-列操作.md
@@ -2,7 +2,9 @@
 
 
 
-## 1.追加列
+## 1.增加列
+
+追加列
 
 ![image-20211221222128783](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221222147.png)
 
@@ -62,3 +64,48 @@ print(table)
 ```
 
 ![image-20211221223529649](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221223805.png)
+
+
+## 5.修改列数据
+
+批量修改列数据
+
+案例: 把金额列的`¥`去掉
+
+```python
+import pandas as pd
+
+table = pd.read_excel("./student.xlsx", sheet_name="Sheet2")
+table["金额"] =  table["金额"].apply(lambda x: x.replace("¥", ""))
+```
+
+## 6.拆分列
+
+```python
+import pandas as pd
+
+books = pd.read_excel("./books.xlsx",sheet_name="Sheet2")
+df = books['name'].str.split(expand=True) # 拆分name列
+books["first name"] = df[0]  # 增加列 first name
+books["last name"] = df[1]   # 增加列 last name
+print(books)
+```
+![](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221100940.png)
+![](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221100949.png)
+
+拆分列api原文
+![](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221100954.png)
+- pat: 字符串或正则表达式以拆分。如果未指定，则在空格上拆分。
+- n: 拆分后保留多少个元素. -1表示保留全部
+- expand: 将拆分字符串展开到单独的列中 expand一般设置为True
+
+## 7.合并列
+```python
+import pandas as pd
+
+student = pd.read_excel("./student.xlsx",sheet_name="Sheet1")
+student["name"] = student["first name"] +" "+ student["first name"]
+print(studentr) 
+```
+![](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221102441.png)
+
