增加查看列信息

--- a/29-列操作.md
+++ b/29-列操作.md
@@ -109,3 +109,11 @@ print(studentr)
 ```
 ![](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221102441.png)
 
+## 8. 查看列信息
+
+```python
+import pandas as pd
+
+df = pd.read_excel("C:/temp/People.xlsx")
+print(df.columns) # 查看列
+```
