--- a/21-消除重复数据__定位数据.md
+++ b/21-消除重复数据__定位数据.md
@@ -1,5 +1,4 @@
-# 第21课
-
+# 第21课  消除重复数据(去重)和定位数据
 ## 0 Api原文
 > 原文链接: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop_duplicates.html
 
