--- a/23-分组,透视表.md
+++ b/23-分组,透视表.md
@@ -1,3 +1,4 @@
+# 23 - 分组,透视表
 ##  1.Excel中创建透视表
 
 ![image-20211221204734503](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211443.png)![image-20211221204848166](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221211447.png)
