--- a/29-列操作.md
+++ b/29-列操作.md
@@ -29,6 +29,15 @@ students.drop(columns=['语文'], inplace=True) # 删除列
 print(students)
 ```
 
+### 判断列是否存在
+```python
+import pandas as pd
+
+table = pd.read_excel("./student.xlsx")
+print("数学" in table.columns)
+```
+
+
 ![image-20211221222335974](https://markdown-1301532546.cos.ap-guangzhou.myqcloud.com/markdown/20211221223813.png)
 
 ## 3.插入列
