怎加列计算

--- a/29-列操作.md
+++ b/29-列操作.md
@@ -124,3 +124,24 @@ import pandas as pd
 df = pd.read_excel("C:/temp/People.xlsx")
 print(df.columns) # 查看列
 ```
+
+## 9. 列运算
+计算新列,列计算(计算列)
+```python
+import pandas as pd
+
+file = './excel/books.xlsx'
+books = pd.read_excel(file)
+books["优惠价"] = books["价格"] * books["折扣"]   
+```
+
+使用匿名函数, 计算新列
+```python
+import pandas as pd
+
+file = './excel/books.xlsx'
+books = pd.read_excel(file, index_col="id")
+books["价格"] = books["价格"].apply(lambda x: x + 2)   
+```
+
+
